first pass on website, added websocket messages, configured endpoints. TODO: javascript to handle the messages adn events from the server